// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UtilizationSummary renders filtered rows (total and trend_max only) and the trend footer 1`] = `
<div>
  <hr />
  <div>
    <div
      class="cds--data-table-content"
    >
      <table
        class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
      >
        <thead>
          <tr>
            <th
              colspan="2"
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                CPU
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <colgroup>
          <col />
          <col
            style="width: 30%;"
          />
        </colgroup>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td>
              CPU Total
            </td>
            <td>
              3.2 GHz
            </td>
          </tr>
          <tr>
            <td>
              CPU Available
            </td>
            <td>
              1.2 GHz
            </td>
          </tr>
          <tr>
            <td>
              Trend: Max
            </td>
            <td>
              2.8 GHz
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div>
    <hr />
    <div
      class="cds--data-table-content"
    >
      <table
        class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
      >
        <thead>
          <tr>
            <th
              colspan="2"
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Memory
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <colgroup>
          <col />
          <col
            style="width: 30%;"
          />
        </colgroup>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td>
              Memory Total
            </td>
            <td>
              16 GB
            </td>
          </tr>
          <tr>
            <td>
              Trend: Max
            </td>
            <td>
              14 GB
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <hr />
  <p>
    * Information shown is based on available trend data from 06/11/2024 to 06/17/2024 in the UTC time zone.
  </p>
</div>
`;

exports[`UtilizationSummary shows no-data message when hasTrendData is false and a node is selected 1`] = `
<div>
  <div
    class="cds--inline-notification cds--inline-notification--low-contrast cds--inline-notification--info cds--inline-notification--hide-close-button"
    role="status"
  >
    <div
      class="cds--inline-notification__details"
    >
      <svg
        aria-hidden="true"
        class="cds--inline-notification__icon"
        fill="currentColor"
        focusable="false"
        height="20"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z"
          data-icon-path="inner-path"
          fill="none"
        />
        <path
          d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,6a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"
        />
        <title>
          info icon
        </title>
      </svg>
      <div
        class="cds--inline-notification__text-wrapper"
      >
        <div
          class="cds--inline-notification__title"
          dir="auto"
        >
          No performance data is available for the selected item.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UtilizationSummary shows no-node-selected message when hasTrendData is false and noNodeSelected is true 1`] = `
<div>
  <div
    class="cds--inline-notification cds--inline-notification--low-contrast cds--inline-notification--info cds--inline-notification--hide-close-button"
    role="status"
  >
    <div
      class="cds--inline-notification__details"
    >
      <svg
        aria-hidden="true"
        class="cds--inline-notification__icon"
        fill="currentColor"
        focusable="false"
        height="20"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z"
          data-icon-path="inner-path"
          fill="none"
        />
        <path
          d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,6a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"
        />
        <title>
          info icon
        </title>
      </svg>
      <div
        class="cds--inline-notification__text-wrapper"
      >
        <div
          class="cds--inline-notification__title"
          dir="auto"
        >
          Select a node on the left to view Utilization information.
        </div>
      </div>
    </div>
  </div>
</div>
`;
